Horizonriver QA20-Mar-2017/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assign_To_Team__c</fullName>
        <label>Assign To Team</label>
        <picklist>
            <picklistValues>
                <fullName>Field_Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Team I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Team II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staging_Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecom_Team</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cal__Send_eMail_Reminder__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send eMail Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HRT_Account_Email__c</fullName>
        <label>Account Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HRT_CP_IMEI__c</fullName>
        <label>CP IMEI</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HRT_CP_MAC__c</fullName>
        <label>CP MAC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HRT_Carrier__c</fullName>
        <label>Carrier</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HRT_Circuit_10__c</fullName>
        <label>Circuit 10</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HRT_Circuit_Speed__c</fullName>
        <label>Circuit Speed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HRT_Circuit_Type__c</fullName>
        <label>Circuit Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HRT_Cutover_Date__c</fullName>
        <label>Cutover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRT_Cutover_process_completion_date__c</fullName>
        <label>Cutover Process Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRT_HW_MAC__c</fullName>
        <label>HW MAC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HRT_HW_Name__c</fullName>
        <label>HW Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HRT_HW_Serial__c</fullName>
        <label>HW Serial #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRT_Install_Date__c</fullName>
        <label>Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRT_Modem_Validation_Date__c</fullName>
        <label>Modem Validation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRT_Notification_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notification Send?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HRT_P4_Install_Date__c</fullName>
        <label>P4 Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRT_Site_Survey__c</fullName>
        <label>Site Survey</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HRT_Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Telecom Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Staging Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Field Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Implementation Team I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Implementation Team II</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HRT_Support_Pin__c</fullName>
        <label>Support Pin</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HRT_Task_State__c</fullName>
        <label>Task State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRT_VZ_CARD__c</fullName>
        <label>VZ CARD #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RingCentral__Call_Recording__c</fullName>
        <formula>IF(NOT(ISBLANK(RingCentral__Recording_Information__c)), HYPERLINK(&quot;javascript:function popupCenter(url, title, w, h){var dualScreenLeft = window.screenLeft !== undefined ? window.screenLeft : screen.left; var dualScreenTop = window.screenTop !== undefined ? window.screenTop : screen.top; var width = window.innerWidth ? window.innerWidth : document.documentElement.clientWidth ? document.documentElement.clientWidth : screen.width;var height = window.innerHeight ? window.innerHeight : document.documentElement.clientHeight ? document.documentElement.clientHeight : screen.height; var left = ((width / 2) - (w / 2)) + dualScreenLeft; var top = ((height / 2) - (h / 2)) + dualScreenTop; var newWindow = window.open(url, title, &apos;scrollbars=yes, width=&apos; + w + &apos;, height=&apos; + h + &apos;, top=&apos; + top + &apos;, left=&apos; + left); if (window.focus) {newWindow.focus();}} popupCenter(&apos;http://apps.ringcentral.com/integrations/recording/1.1/index.html?id=&quot; + RingCentral__Recording_Information__c + &quot;&apos;,&apos;Call recording&apos;, 450,500)&quot;, &quot;http://apps.ringcentral.com/integrations/recording/1.1/index.html?id=&quot; + RingCentral__Recording_Information__c), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Recording</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RingCentral__RC_Logging_Type__c</fullName>
        <label>RC Logging Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RingCentral__Recording_Information__c</fullName>
        <label>Recording Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__From_delete_date__c</fullName>
        <description>From Delete date for MassMailer Setup page</description>
        <label>From delete date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__Mass_Email_Name__c</fullName>
        <label>Mass Email Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__To_Del_Date__c</fullName>
        <label>To Del Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>